--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "postgresql-express-crud-rest-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "RESTful API with Node.js, Express, and PostgreSQL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/itemka/postgresql-express-crud-rest-api/issues"
   },
-  "homepage": "https://github.com/itemka/postgresql-express-crud-rest-api#readme"
+  "homepage": "https://github.com/itemka/postgresql-express-crud-rest-api#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.12",
+    "pg": "^8.6.0"
+  }
 }
